<resources>
    <string name="app_name">QuanLyThuVien</string>
    <string name="nav_home">Trang chủ</string>
    <string name="nav_book">Sách</string>
    <string name="nav_account">Tài Khoản</string>
    <string name="nav_my_profile">Thông tin cá nhân</string>
    <string name="nav_drawer_open">Open navigation</string>
    <string name="nav_drawer_close">Close navigation</string>
    <string name="nav_coupon">Nghiệp vụ</string>
    <string name="nav_reader">Độc giả</string>
    <string name="nav_setting">Cài đặt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ivalid_name">Please enter valid name</string>
    <string name="invalid_email">enter invalid email</string>
    <string name="invalid_phone">enter invalid phone number</string>
    <string name="invalid_password">enter six digital password</string>
    <string name="invalid_confirm_password">password does not match</string>
</resources>