<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            />

    </group>

    <item android:title="@string/nav_book">
        <menu>
            <item android:id="@+id/nav_book"
                android:title="@string/nav_book"
                android:icon="@drawable/ic_baseline_menu_book_24"/>
        </menu>
    </item>
    <item android:title="Độc giả">
        <menu>
            <item android:id="@+id/nav_reader"
                android:title="Độc giả"
                android:icon="@drawable/ic_baseline_people_24"/>
        </menu>
    </item>
    <item android:title="Nghiệp vụ">
        <menu>
            <item android:id="@+id/nav_borrow_book"
                android:title="Phiếu mượn sách"
                android:icon="@drawable/ic_baseline_book_borrow"/>
            <item android:id="@+id/nav_return_book"
                android:title="Phiếu trả sách"
                android:icon="@drawable/ic_baseline_book_return"/>
        </menu>
    </item>

    <item android:title="@string/nav_account">
        <menu>
            <item android:id="@+id/nav_account"
                android:title="@string/nav_my_profile"
                android:icon="@drawable/ic_baseline_person_24"/>
        </menu>
    </item>
</menu>